Revert "fix: mostly covers fancybox"
This reverts commit a1ba85d0b10e5ee483618130134e6a4b9576703c.

--- a/component/SalesRouter.styl
+++ b/component/SalesRouter.styl
@@ -1,17 +1,8 @@
 body > div
   display none
 
-body >
-  .fancybox-overlay
-    position fixed
-    top 0
-    bottom 0
-    left 0
-    right 0
-    height auto!important
-  .fancybox-wrap.fancybox-opened
-    margin-top -225px
-    display block
+body > .fancybox-wrap.fancybox-opened
+  display block
 
 // would be nice to infer this stuff from sales-url-mappings
 body.super, body.superSites, body.superUsers
